# memsearch

./: pyproject.toml
memsearch/: __init__.py  index.py
