[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "memsearch"
version = "0.1.0"
description = "A high-performance in-memory vector search library"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
authors = [
    { name = "memsearch contributors" },
]
keywords = ["vector-search", "similarity-search", "embeddings", "ann", "approximate-nearest-neighbors"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.24.0",
    "scipy>=1.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "pre-commit>=3.4.0",
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.2.0",
    "mkdocstrings[python]>=0.23.0",
]
faiss = [
    "faiss-cpu>=1.7.4",
]

[project.urls]
Homepage = "https://github.com/zilliztech/memsearch"
Documentation = "https://memsearch.readthedocs.io"
Repository = "https://github.com/zilliztech/memsearch"
Issues = "https://github.com/zilliztech/memsearch/issues"
Changelog = "https://github.com/zilliztech/memsearch/releases"

[tool.hatch.build.targets.wheel]
packages = ["src/memsearch"]

[tool.ruff]
line-length = 88
target-version = "py39"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["memsearch"]

[tool.mypy]
python_version = "3.9"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src/memsearch --cov-report=term-missing"

[tool.coverage.run]
source = ["src/memsearch"]
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
